# ACE_TAO

./: .clang-format  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  ACE-INSTALL  ACE-INSTALL.html  ACE-categories  ACE-configuration.txt  ACE-inheritance.ps  ACE-install.sh  ACE-subsets.html  ACE.DSW  ACE.mwc  ACE_TAO_Core.mwc  BIBLIOGRAPHY  BUG-REPORT-FORM  CIAO_TAO_DAnCE.mwc  COPYING  ChangeLog  ChangeLog-00a  ChangeLog-96b  ChangeLog-97a  ChangeLog-97b  ChangeLog-98a  ChangeLog-98b  ChangeLog-99a  ChangeLog-99b  ChangeLog-dds4ccm  ChangeLog_Reactor_Deadlock  ChangeLog_Reactor_Rewrite  ChangeLog_bug_575  ChangeLog_pnotify  DOC-way.html  FAQ  GNUMakefile  GNUmakefile  INSTALL  Instructions for building middleware RACE SA-POP and CoSMIC.txt  LogFileOut.h  (+57 more)
TAO/tao/: .gitignore  AbstractBase.cpp  AbstractBase.h  AbstractBase.inl  Abstract_Servant_Base.cpp  Abstract_Servant_Base.h  Abstract_Servant_Base.inl  Acceptor_Filter.cpp  Acceptor_Filter.h  Acceptor_Impl.cpp  Acceptor_Impl.h  Acceptor_Registry.cpp  Acceptor_Registry.h  Acceptor_Registry.i  Acceptor_Registry.inl  Active_Object_Map.cpp  Active_Object_Map.h  Active_Object_Map.i  Adapter.cpp  Adapter.h  Adapter_Factory.cpp  Adapter_Factory.h  Adapter_Registry.cpp  Adapter_Registry.h  Alias_TypeCode.cpp  Alias_TypeCode.h  Alias_TypeCode.inl  Alias_TypeCode_Static.cpp  Align.h  Allocator.h  Any.cpp  Any.h  Any.i  AnySeq.pidl  AnySeqA.cpp  AnySeqC.cpp  AnySeqC.h  AnySeqS.h  AnyTypeCode.mpc  AnyTypeCode_Adapter.cpp  (+1747 more)
ace/: .cvsignore  ACE.bpg  ACE.cpp  ACE.h  ACE.i  ACE.inl  ACED.bpr  ACED.cpp  ACER.bpr  ACER.cpp  ACE_Codecs_export.h  ACE_Flag_Manip.cpp  ACE_Flag_Manip.h  ACE_Handle_Ops.cpp  ACE_Handle_Ops.h  ACE_Init.cpp  ACE_Lib_Find.cpp  ACE_Lib_Find.h  ACE_Library.mak  ACE_Library.mdp  ACE_Sock_Connect.h  ACE_Threads_export.h  ACE_TkReactor_export.h  ACE_crc32.cpp  ACE_crc_ccitt.cpp  ACE_export.h  ARGV.cpp  ARGV.h  ARGV.i  ARGV.inl  ATM_Acceptor.cpp  ATM_Acceptor.h  ATM_Acceptor.i  ATM_Addr.cpp  ATM_Addr.h  ATM_Addr.i  ATM_Connector.cpp  ATM_Connector.h  ATM_Connector.i  ATM_Params.cpp  (+1469 more)
ace/ATM/: ATM_Acceptor.h  ATM_Addr.cpp  ATM_Connector.cpp  ATM_Params.cpp  ATM_Params.h  ATM_Stream.h  ATM_Stream.i  Makefile  Makefile~
ace/CLASSIX/: Acceptor.cpp  Acceptor.i  Addr.cpp  CLASSIX_CLD_Connector.h  CLASSIX_CO_Acceptor.h  CLASSIX_CO_Connector.h  CLASSIX_Dgram_Mcast.h  CLASSIX_Group.h  CLASSIX_Group_Stamp.h  CLASSIX_OS.cpp  CLASSIX_OS.h  CLASSIX_Peer_SAP.h  CLASSIX_Port.cpp  CLASSIX_Port.h  CLASSIX_Port.i  CLASSIX_Port_Core.h  CLASSIX_Port_Default.h  CLASSIX_Reactor.h  CLASSIX_Reactor.i  CLASSIX_SAP.h  CLASSIX_Stream.h  Connector.h  Group.h  Group_Dynamic.cpp  Group_Dynamic.h  Group_Stamp.cpp  Makefile  OS.cpp  OS.h  Port_Core.h  Port_Default.cpp  SAP.cpp  Select_Reactor.h
ace/Connection/: Acceptor.cpp  Acceptor.h  Asynch_Acceptor.cpp  Asynch_IO.cpp  Asynch_IO.h  Asynch_IO_Impl.cpp  Caching_Strategies_T.cpp  Caching_Strategies_T.h  Connector.cpp  Connector.h  LOCK_SOCK_Acceptor.cpp  LOCK_SOCK_Acceptor.h  Makefile  POSIX_Asynch_IO.cpp  Strategies_T.h  WIN32_Asynch_IO.h
ace/Demux/: Event_Handler.cpp  Event_Handler.h  FlReactor.cpp  Makefile  POSIX_Proactor.cpp  POSIX_Proactor.h  Proactor.h  QtReactor.h  Reactor.h  Reactor.i  Reactor_Impl.h  Reactor_Notification_Strategy.cpp  SUN_Proactor.cpp  Select_Reactor.cpp  Select_Reactor_Base.h  Select_Reactor_Base.i  Select_Reactor_T.cpp  TkReactor.cpp  TkReactor.h  WFMO_Reactor.cpp  WIN32_Proactor.h
ace/ETCL/: ETCL.mpc  ETCL_Constraint.cpp  ETCL_Constraint.inl  ETCL_Constraint_Visitor.cpp  ETCL_l.cpp  ETCL_l.cpp.diff
ace/FlReactor/: ace_flreactor.mpc
ace/FoxReactor/: ACE_FoxReactor_export.h  ace_foxreactor.mpc
ace/HTBP/: HTBP_Addr.cpp  HTBP_Addr.h  HTBP_Channel.cpp  HTBP_Channel.h  HTBP_Environment.cpp  HTBP_Environment.h  HTBP_Filter.cpp  HTBP_Filter.h  HTBP_Filter_Factory.h  HTBP_ID_Requestor.cpp  HTBP_ID_Requestor.h  HTBP_Inside_Squid_Filter.h  HTBP_Notifier.h  HTBP_Outside_Squid_Filter.h  HTBP_Session.cpp  HTBP_Session.h  HTBP_Stream.cpp  HTBP_Stream.h  README
ace/IPC/: Addr.cpp  DEV_Addr.h  DEV_Addr.i  DEV_Connector.cpp  DEV_Connector.h  FIFO.h  FIFO_Send.cpp  FIFO_Send_Msg.cpp  FILE.cpp  FILE_Addr.i  FILE_Connector.h  INET_Addr.h  Makefile  SPIPE_Addr.h  SPIPE_Addr.i  SPIPE_Connector.cpp  SPIPE_Connector.h  SV_Message.h  SV_Message_Queue.i  SV_Semaphore_Complex.cpp  SV_Semaphore_Complex.h  SV_Semaphore_Simple.h  SV_Shared_Memory.h  Signal.cpp  TLI.cpp  TLI.h  TLI_Stream.h  TTY_IO.h  UNIX_Addr.cpp  UNIX_Addr.h  UPIPE_Acceptor.cpp  UPIPE_Acceptor.h  UPIPE_Stream.cpp  UPIPE_Stream.h  XTI_ATM_Mcast.cpp
ace/Logging/: Dump.h  Dump_T.cpp  Log_Msg.cpp  Log_Msg_Backend.cpp  Log_Msg_UNIX_Syslog.h  Log_Record.cpp  Log_Record.h  Logging_Strategy.cpp  Trace.h  (+2 more)
man/: Makefile.am
tests/: .cvsignore  ACE_Init_Test.cpp  ACE_Init_Test.dsp  ACE_Init_Test.h  ACE_Init_Test.rc  ACE_Init_TestDlg.cpp  ACE_Init_Test_Resource.h  ACE_Init_Test_StdAfx.h  ACE_Test.cpp  ACE_Test.dsp  ARGV_Test.cpp  ARGV_Test.dsp  ARGV_Test_WinCE.vcp  Aio_Platform_Test.bpr  Aio_Platform_Test.cpp  Aio_Platform_Test.icc  Arg_Shifter_Test.cpp  Arg_Shifter_Test.icc  Array_Map_Test.cpp  Async_Timer_Queue_Test.cpp  Atomic_Op_Test.bpr  Atomic_Op_Test.cpp  Atomic_Op_Test.dsp  Atomic_Op_Test.icc  Atomic_Op_Test_WinCE.vcp  Auto_IncDec_Test.cpp  Auto_IncDec_Test.dsp  Auto_IncDec_Test.icc  Auto_IncDec_Test_WinCE.vcp  Barrier_Test.MAK  Barrier_Test.bpr  Barrier_Test.cpp  Barrier_Test.dsp  Barrier_Test_WinCE.vcp  Based_Pointer_Test.cpp  Based_Pointer_Test_Lib.cpp  Basic_Types_Test.bpr  Basic_Types_Test.cpp  Basic_Types_Test.dsp  Basic_Types_Test.icc  (+571 more)
trunk/: ACE-INSTALL  ACE-INSTALL.html  ACE-categories  ACE.DSW  ACE.ifnames  ACE.mwc  BIBLIOGRAPHY  BUG-REPORT-FORM  COPYING  ChangeLog  ChangeLog-96b  ChangeLog-97a  ChangeLog-97b  ChangeLog-98a  ChangeLog-98b  ChangeLog-99a  ChangeLog-99b  DOC-way.html  FAQ  INSTALL  Makefile  Makefile.am  Makefile.bor  NEWS  PROBLEM-REPORT-FORM  README  Release  THANKS  VERSION  acconfig.h  ace-config.in  aclocal.m4  configure  configure.ac  configure.in  libtool  ltcf-cxx.sh  vc7_nightly.mwc
(+229442 files in other folders)
